src/app/home/home-banner/home-banner.component.scss
@import '~styles/variables';
@import "~fullpage.js/dist/jquery.fullpage.css";
.home-banner {
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
  background: $rusianViolet;
  display: flex;
  flex-direction: column;
  height: 100vh;
  // padding-top: 50px;
  overflow: hidden;
  @media only screen and (orientation: landscape) {
    flex-direction: row;
    padding-top: 0;
    text-align: left;
    padding-left: 10%;
  }
} // .first-banner img{
//   width: 300px;
//   text-align: center;
// }


.banner-tittle {
  font-family: $fontFamilyPrimary;
  font-size: 1.5rem;
  color: $white;
  word-spacing: 100vw;
  margin-bottom: 10px;
  margin-top: 0;
  @media (min-width: 768px) {
    font-size: 2rem;
  }
}

.banner-description {
  font-family: $fontFamilySecondary;
  color: $white;
  font-weight: 400;
  font-size: 0.82rem;
  margin-left: 14%;
  margin-right: 14%;
  margin-top: 10px;
  @media only screen and (orientation: landscape) {
    margin-left: 0%;
    margin-right: 0%;
  }
  @media (min-width: 768px) {
    font-size: 1rem;
  }
}

.line {
  width: 45px;
  border-bottom: 2px solid $white;
  margin: auto;
  @media only screen and (orientation: landscape) {
    margin: 0;
  }
}

.home-button-wrapper {
  max-width: 150px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  @media only screen and (orientation: landscape) {
    margin-left: 0;
    margin-right: 0;
  } // @media (min-width: 1024px) {
  //   width: 15%;
  // }
}

.first-image-banner {
  animation-name: first-image-banner;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  // overflow: hidden;
  margin-top: -40px;
  width: 300px;
  @media only screen and (orientation: landscape) {
    margin-top: 0;
    min-width: 90vh;
    margin-right: 80px;
  }
}

.banner-image {
  position: relative;
  right: -70px;  
  top: -15px;
  width: 70%;
  @media only screen and (orientation: landscape) {
    position: static;
    right: 0;
  }
  @media (min-width: 1024px) {
    display: none;
  }
}

.banner-image-3 {
  right: 0px;
  margin-top: 40px;
}

.banner-video {
  display: none;
  @media (min-width: 1024px) {
    display: block;
  }
}

@keyframes first-image-banner {
  from {
    transform: translate(0, 10px);
  }
  65% {
    transform: translate(0, 25px);
  }
  to {
    transform: translate(0, 10px);
  }
}

